fixed first-of-type,nth-of-type  problem and overflow:hidden for top corner radius

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,18 +1,50 @@
-table, td{
+table{
+    width: 1200px;
     border-collapse: collapse;
-    background-color: #e4d1d1;
+    position: absolute; top: 8%; left: 10%; right: 10%; bottom: 10%;
+    box-shadow: 0 0 20px rgba(0,0,0,0.2);
+    border-bottom: 10px solid #9fa9a3;
+    background-color: #f0f0f0;
+    border-radius: 2% 2% 0 0;
+    overflow: hidden;
 }
+
+td{
+    padding: 15px;
+}
+
+thead th {
+    padding: 10px;
+    background-color: #9fa9a3;
+    color: seashell;
+    text-shadow: 2px 2px rgba(0,0,0,0.2);
+}
+
+tbody td:first-of-type{
+    width: 50px;
+    font-weight: bold;
+    text-align: center;
+}
+
+tbody .section-name{
+    width: 150px;
+    text-align: center;
+    font-weight: bold;
+}
+
+tbody tr:first-of-type{
+    font-weight: bold;
+    text-align: center;
+}
+
 ul{
     list-style-type: square; ;
 }
-td{
-    padding: 5px
+
+tbody tr:nth-of-type(odd) {
+    background-color: #c5d5c5;
+    border-bottom: 5px #9fa9a3;
 }
-td:first-of-type{
-    font-weight: bold;
-    text-align: center;
-}
-.categories, .section-name{
-    text-align: center;
-    font-weight: bold;
-}
+
+::selection {background-color: #e3e0cc;}
+
